--- a/src/row/index.less
+++ b/src/row/index.less
@@ -32,11 +32,24 @@
     justify-content: space-around;
   }
 
+  &--align-start {
+    align-items: flex-start;
+  }
+
   &--align-center {
     align-items: center;
   }
 
-  &--align-bottom {
+  &--align-end {
     align-items: flex-end;
   }
+
+  &--align-baseline {
+    align-items: baseline;
+  }
+
+  &--align-stretch {
+    align-items: stretch;
+  }
+
 }
