fix: divider error in cardu

--- a/src/cardu/cardu.less
+++ b/src/cardu/cardu.less
@@ -35,3 +35,9 @@
   margin-left: 12px;
   margin-right: 12px;
 }
+
+.van-cardu__divider {
+  display: block;
+  flex: 1;
+  border-top: 1px solid #e8e9eb;
+}
