--- a/src/password-input/index.less
+++ b/src/password-input/index.less
@@ -4,6 +4,7 @@
   position: relative;
   margin: @password-input-margin;
   user-select: none;
+  width: 100%;
 
   &__info,
   &__error-info {
@@ -25,12 +26,14 @@
     width: 100%;
     height: @password-input-height;
     cursor: pointer;
+    flex-wrap: wrap;
 
     &::after {
       border-radius: @password-input-border-radius;
     }
 
     li {
+      box-sizing: border-box;
       position: relative;
       display: flex;
       flex: 1;
@@ -40,6 +43,8 @@
       font-size: @password-input-font-size;
       line-height: 1.2;
       background-color: @password-input-background-color;
+      flex-basis: 16.666666666%;
+      flex-grow: 0;
     }
 
     i {
