fix(Picker): picker loading color in dark theme

--- a/packages/vant/src/picker/index.less
+++ b/packages/vant/src/picker/index.less
@@ -22,6 +22,7 @@
 }
 
 .van-theme-dark {
+  --van-picker-loading-mask-color: rgba(0, 0, 0, 0.6);
   --van-picker-mask-color: linear-gradient(
       180deg,
       rgba(0, 0, 0, 0.6),
