fix(Icons): fix delete / delete-o icon

--- a/packages/vant-icons/src/index.less
+++ b/packages/vant-icons/src/index.less
@@ -5,10 +5,10 @@
   font-style: normal;
   font-display: auto;
   font-family: 'vant-icon';
-  src: url('https://at.alicdn.com/t/font_2553510_iv4v8nulyz.woff2?t=1649083952952')
+  src: url('//at.alicdn.com/t/c/font_2553510_ovbl29ce9ud.woff2?t=1672541115585')
       format('woff2'),
-    url('https://at.alicdn.com/t/font_2553510_iv4v8nulyz.woff?t=1649083952952')
+    url('//at.alicdn.com/t/c/font_2553510_ovbl29ce9ud.woff?t=1672541115585')
       format('woff'),
-    url('https://at.alicdn.com/t/font_2553510_iv4v8nulyz.ttf?t=1649083952952')
+    url('//at.alicdn.com/t/c/font_2553510_ovbl29ce9ud.ttf?t=1672541115585')
       format('truetype');
 }
