fix(Icons): no longer support woff/ttf format

--- a/packages/vant-icons/src/index.less
+++ b/packages/vant-icons/src/index.less
@@ -6,9 +6,5 @@
   font-display: auto;
   font-family: 'vant-icon';
   src: url('//at.alicdn.com/t/c/font_2553510_ovbl29ce9ud.woff2?t=1672541115585')
-      format('woff2'),
-    url('//at.alicdn.com/t/c/font_2553510_ovbl29ce9ud.woff?t=1672541115585')
-      format('woff'),
-    url('//at.alicdn.com/t/c/font_2553510_ovbl29ce9ud.ttf?t=1672541115585')
-      format('truetype');
+    format('woff2');
 }
