--- a/packages/vant/src/popup/index.less
+++ b/packages/vant/src/popup/index.less
@@ -14,7 +14,7 @@ body {
   }
 
   &-popup {
-    position: fixed;
+    position: absolute;
     max-height: 100%;
     overflow-y: auto;
     box-sizing: border-box;
