安卓端多行文本滚动条

--- a/src/fieldtextarea/index.less
+++ b/src/fieldtextarea/index.less
@@ -12,11 +12,12 @@
       // padding-right: 5px;
     }
   }
-  &__wrap-con{
+  &__wrap-con {
     display: flex;
     align-items: center;
   }
   &__control {
+    overflow-y: hidden;
     display: block;
     box-sizing: border-box;
     width: 100%;
@@ -98,4 +99,3 @@
     text-align: right;
   }
 }
-
