fix: passwordinput add disable style

--- a/src/password-input/index.less
+++ b/src/password-input/index.less
@@ -71,6 +71,11 @@
     animation: @number-keyboard-cursor-animation-duration van-cursor-flicker
       infinite;
   }
+  &__item--dis {
+    i {
+      background-color: #ccc;
+    }
+  }
 }
 
 @keyframes van-cursor-flicker {
