fix: change some colors to primary color

--- a/packages/vant/src/picker/index.less
+++ b/packages/vant/src/picker/index.less
@@ -5,7 +5,7 @@
   --van-picker-title-line-height: var(--van-line-height-md);
   --van-picker-action-padding: 0 var(--van-padding-md);
   --van-picker-action-font-size: var(--van-font-size-md);
-  --van-picker-confirm-action-color: var(--van-link-color);
+  --van-picker-confirm-action-color: var(--van-primary-color);
   --van-picker-cancel-action-color: var(--van-text-color-2);
   --van-picker-option-font-size: var(--van-font-size-lg);
   --van-picker-option-padding: 0 var(--van-padding-base);
