--- a/packages/vant-icons/src/index.less
+++ b/packages/vant-icons/src/index.less
@@ -6,5 +6,7 @@
   font-display: auto;
   font-family: 'vant-icon';
   src: url('//at.alicdn.com/t/c/font_2553510_ovbl29ce9ud.woff2?t=1672541115585')
-    format('woff2');
+      format('woff2'),
+    url('//at.alicdn.com/t/c/font_2553510_ovbl29ce9ud.woff?t=1672541115585')
+      format('woff');
 }
